[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false
keywords = ["aionex", "sdk", "examples"]
description = "Examples for using the Aionex SDK"
repository = "https://github.com/AionexTech/dex-sdk-examples"
license = "MIT"

[workspace]
resolver = "3"
members = ["market-making", "utilities"]

[workspace.dependencies]
alloy = { version = "1.0.41", features = ["full"] }
clap = { version = "4.5.51", features = ["derive"] }
dex-sdk = { path = "../dex-sdk" }
dotenvy = "0.15.7"
envy = "0.4.2"
fastnum = { version = "0.7.2" }
futures = { version = "0.3.31" }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-test = "0.2.5"
url = "2.5.7"
